--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zeebe-performance-test",
+  "name": "zeebe-ghetto-tps",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
