--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sitapati/testcontainers": "^2.8.1",
+    "@types/node": "^14.10.0",
+    "commander": "^6.1.0",
     "zeebe-node": "^0.23.3"
   }
 }
